--- a/.github/workflows/GitHubActions.yml
+++ b/.github/workflows/GitHubActions.yml
@@ -2,7 +2,7 @@ name: Docker Build and Test
 
 on:
   push:
-    branches: [ githubActionsBranch ]
+    branches: [ githubActionsBranch, main ]
   pull_request:
     branches: [ main ]
 
